--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
     
@@ -12,23 +13,23 @@
             <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
-        <!-- Unordered list element -->
-        <ul>
-            <!-- List item element -->
+    <!-- Unordered list element -->
+    <ul>
+    <!-- List item element -->
             <li>
-                <!-- Anchor element -->
-                <a href="#what-we-do">What We Do</a>
-            </li>
-            <li>
-                <a href="#what-you-do">What You Do</a>
-            </li>
-            <li>
-                <a href="#your-trainers">Your Trainers</a>
-            </li>
-            <li>
-                <a href="#reach-out">Reach Out</a>
-            </li>
-        </ul>
+    <!-- Anchor element -->
+            <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+            <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+            <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+            <a href="#reach-out">Reach Out</a>
+        </li>
+    </ul>
         </nav>
         </header>
     
