--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <body>
     
     <!-- navigation -->
-        <header>
+<header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="/">
+            RUN BUDDY</a>
         </h1>
-        <nav>
+    <nav>
     <!-- Unordered list element -->
         <ul>
     <!-- List item element -->
@@ -30,39 +31,38 @@
             <a href="#reach-out">Reach Out</a>
         </li>
         </ul>
-        </nav>
-        </header>
-    <!-- Sign Up section -->
+    </nav>
+</header>
 
 <!-- hero/jumbotron -->
 <section class="hero">
     <div class="hero-form">
-        <h3>Get Started Today</h3>
-        <p>Fill out this form and one of our trainers will schedule a consult.</p>
-        <form>
-            <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
-            <label for="email">Enter email address:</label>
-            <input type="email" placeholder="Email Address" name="email" id="email" class="form-input">
-            <label for="phone">Enter a telephone number:</label>
-            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input">
-        <p>       
-            Have you worked out with a trainer before?
-            <input type="radio" name="trainer-confirm" id="trainer-yes"/>
-            <label for="trainer-yes">Yes</label>
-            <input type="radio" name="trainer-confirm" id="trainer-no"/>
-            <label for="trainer-no">No</label>
-        </p>
-        <p>
-            <label for="checkbox">
-            I acknowledge that I am at least 18 years of age.
-            </label>
-            <input type="checkbox" name="age-confirm" id="checkbox" />
-        </p>
+    <h3>Get Started Today</h3>
+    <p>Fill out this form and one of our trainers will schedule a consult.</p>
+    <form>
+        <label for="name">Enter full name:</label>
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
+        <label for="email">Enter email address:</label>
+        <input type="email" placeholder="Email Address" name="email" id="email" class="form-input">
+        <label for="phone">Enter a telephone number:</label>
+        <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input">
+    <p>       
+        Have you worked out with a trainer before?
+        <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+        <label for="trainer-yes">Yes</label>
+        <input type="radio" name="trainer-confirm" id="trainer-no"/>
+        <label for="trainer-no">No</label>
+    </p>
+    <p>
+        <label for="checkbox">
+        I acknowledge that I am at least 18 years of age.
+        </label>
+        <input type="checkbox" name="age-confirm" id="checkbox" />
+    </p>
         <button type="submit">
-        Get Running!
+        Get running!
         </button>
-        </form>
+    </form>
     </div>
 </section>
 
