--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
     <!-- "what we do" section-->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
+        <h2 class="section-title primary-border">
+            What We Do</h2>
         <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft  
         </p>
@@ -105,8 +106,45 @@
     </section> 
 
     <!-- "meet the trainers" section-->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers</h2>
+    <article class="trainer">
+        <img src="./assets/images/trainer-1.jpg" alt="Aaron Stephens in his workout clothes, ready to pump iron" />
+        <div class="trainer-bio text-left">
+            <h3>Aaron Stephans</h3>
+            <h4>Speed / Strength</h4>
+            <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae quaerat unde harum sapiente voluptate quae, ratione est omnis quos! 
+            Nesciunt veniam exercitationem magnam, aperiam voluptates quae velit error quibusdam accusamus.
+            </p>
+        </div>
+    </article>
+
+    <article class="trainer">
+        <div class="trainer-bio text-right">
+            <h3>Joanna Gill</h3>
+            <h4>Endurance</h4>
+            <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Placeat, provident minima, ad debitis officiis veritatis tempora dolores recusandae in unde explicabo sequi vitae odit suscipit iure at tempore rerum temporibus?
+            </p>
+
+        </div>
+        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+<article class="trainer">
+    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Rem eos explicabo tempore voluptatem, totam earum eius, vitae ipsum sit, illum commodi ipsa aut ex. 
+            Vitae distinctio eveniet adipisci nulla omnis.
+        </p>
+    </div>
+</article>
     </section>
 
     <!-- "reach out" section-->
