--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         <h2 class="section-title primary-border">
             Meet The Trainers</h2>
     <article class="trainer">
-        <img src="./assets/images/trainer-1.jpg" alt="Aaron Stephens in his workout clothes, ready to pump iron" />
+        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
         <div class="trainer-bio text-left">
-            <h3>Aaron Stephans</h3>
+            <h3>Arron Stephans</h3>
             <h4>Speed / Strength</h4>
             <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae quaerat unde harum sapiente voluptate quae, ratione est omnis quos! 
@@ -148,12 +148,11 @@
     </section>
 
     <!-- "reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact info">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6756.7784949915695!2d-110.83755592085575!3d32.1397927657206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d664425547fa73%3A0x7e5b3c7dccb4307e!2sCircle%20K!5e0!3m2!1sen!2sus!4v1623973240091!5m2!1sen!2sus" 
-            width="400" 
-            height="400" 
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6756.7784949915695!2d-110.83755592085575!3d32.1397927657206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d664425547fa73%3A0x7e5b3c7dccb4307e!2sCircle%20K!5e0!3m2!1sen!2sus!4v1623973240091!5m2!1sen!2sus"  
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy">
