--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Run Buddy</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8"/>
+    <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+
+<body>
     
     <!-- navigation -->
 <header>
-        <h1>
-            <a href="/">
-            RUN BUDDY</a>
-        </h1>
+    <h1>
+        <a href="/">
+        RUN BUDDY</a>
+    </h1>
     <nav>
     <!-- Unordered list element -->
         <ul>
@@ -150,38 +152,39 @@
     <!-- "reach out" section-->
     <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
-        <div class="contact info">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6756.7784949915695!2d-110.83755592085575!3d32.1397927657206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d664425547fa73%3A0x7e5b3c7dccb4307e!2sCircle%20K!5e0!3m2!1sen!2sus!4v1623973240091!5m2!1sen!2sus"  
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-        </iframe>
-        </div>
-        <div>
-            <h3>Run Buddy</h3>
-            <p>
+        <div class="contact-info">
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
+              style="border:0;" 
+              allowfullscreen=""
+              loading="lazy">
+            </iframe>
+            <div>
+              <h3>Run Buddy</h3>
+              <p>
                 Any questions or concerns before signing up?
                 <br />
                 Let us know and we'll be happy to talk to you!
-            </p>
-            <address>
+              </p>
+              <address>
                 55 Main Street <br />
                 Some Town, Ca <br />
-                12345 <br />
-                P: 555.RUN.BUDZ (555.786.2839) <br />
+                12345<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br />
                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-            </address>
-        </div>
+              </address>
+            </div>
+          </div>
     </section>
 
     <!-- footer -->
      <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-            <a href="#">Read Our Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
-    </body>
+</body>
+
 </html>
