--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
-    
+<body> 
     <!-- navigation -->
 <header>
     <h1>
-        <a href="/">
+        <a href="./index.html">
         RUN BUDDY</a>
     </h1>
     <nav>
