--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,12 +5,14 @@
     <title>Privacy Policy - Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/secondary-styles.css" />
+
   </head>
   <body>
     <header>
         <h1>
-            <a href="/">
-            RUN BUDDY</a>
+            <a href="./index.html">
+            RUN BUDDY
+          </a>
         </h1>
     <nav>
     <!-- Unordered list element -->
